<?xml version="1.0" encoding="utf-8"?>
<com.ltx.service.DraggableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:id="@+id/control_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/floating_panel_bg"
        android:orientation="vertical"
        android:padding="4dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:contentDescription="@string/desc_slide_up"
            android:src="@drawable/ic_floating_arrow_up"
            app:backgroundTint="@color/floating_btn_bg"
            app:elevation="6dp"
            app:fabSize="mini"
            app:tint="@color/floating_btn_icon"
            tools:ignore="ClassNameCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:contentDescription="@string/desc_slide_left"
                android:src="@drawable/ic_floating_arrow_left"
                app:backgroundTint="@color/floating_btn_bg"
                app:elevation="6dp"
                app:fabSize="mini"
                app:tint="@color/floating_btn_icon"
                tools:ignore="ClassNameCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_setting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="3dp"
                android:contentDescription="@string/desc_settings"
                android:src="@drawable/ic_floating_settings"
                app:backgroundTint="@color/floating_btn_settings_bg"
                app:elevation="4dp"
                app:fabSize="mini"
                app:tint="@color/floating_btn_settings_icon"
                tools:ignore="ClassNameCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:contentDescription="@string/desc_slide_right"
                android:src="@drawable/ic_floating_arrow_right"
                app:backgroundTint="@color/floating_btn_bg"
                app:elevation="6dp"
                app:fabSize="mini"
                app:tint="@color/floating_btn_icon"
                tools:ignore="ClassNameCheck" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_down_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:contentDescription="@string/desc_slide_down"
            android:src="@drawable/ic_floating_arrow_down"
            app:backgroundTint="@color/floating_btn_bg"
            app:elevation="6dp"
            app:fabSize="mini"
            app:tint="@color/floating_btn_icon"
            tools:ignore="ClassNameCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:contentDescription="@string/desc_close"
            android:src="@drawable/ic_floating_close"
            app:backgroundTint="@color/floating_btn_close_bg"
            app:elevation="4dp"
            app:fabSize="mini"
            app:tint="@color/floating_btn_close_icon"
            tools:ignore="ClassNameCheck" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_expand_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:contentDescription="@string/desc_expand"
        android:src="@drawable/ic_floating_expand"
        android:visibility="gone"
        app:backgroundTint="@color/floating_btn_bg"
        app:elevation="6dp"
        app:fabSize="mini"
        app:tint="@color/floating_btn_icon"
        tools:ignore="ClassNameCheck" />

</com.ltx.service.DraggableLinearLayout>
